src/GramaticaSQLParser.java
// Generated from GramaticaSQL.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__11=1, T__10=2, T__9=3, T__8=4, T__7=5, T__6=6, T__5=7, T__4=8, T__3=9, 
		T__2=10, T__1=11, T__0=12, CREATE=13, DATABASE=14, DATABASES=15, ALTER=16, 
		DROP=17, SHOW=18, USE=19, CHECK=20, CONSTRAINT=21, PRIMARY=22, FOREIGN=23, 
		KEY=24, REFERENCES=25, INT=26, FLOAT=27, DATE=28, CHAR=29, AND=30, OR=31, 
		NOT=32, TABLE=33, TABLES=34, RENAME=35, TO=36, ADD=37, COLUMN=38, COLUMNS=39, 
		INSERT=40, INTO=41, VALUES=42, NULL=43, UPDATE=44, SET=45, WHERE=46, DELETE=47, 
		SELECT=48, FROM=49, ORDER=50, BY=51, ASC=52, DESC=53, NUM=54, ID=55, TEXT=56, 
		VALOR=57, LOGICAL=58, COMMENTS=59, WS=60;
	public static final String[] tokenNames = {
		"<INVALID>", "'<='", "'<>'", "'''", "'('", "')'", "'*'", "'>='", "';'", 
		"'<'", "','", "'='", "'>'", "CREATE", "DATABASE", "DATABASES", "ALTER", 
		"DROP", "SHOW", "USE", "CHECK", "CONSTRAINT", "PRIMARY", "FOREIGN", "KEY", 
		"REFERENCES", "INT", "FLOAT", "DATE", "CHAR", "AND", "OR", "NOT", "TABLE", 
		"TABLES", "RENAME", "TO", "ADD", "COLUMN", "COLUMNS", "INSERT", "INTO", 
		"VALUES", "NULL", "UPDATE", "SET", "WHERE", "DELETE", "SELECT", "FROM", 
		"ORDER", "BY", "ASC", "DESC", "NUM", "ID", "TEXT", "VALOR", "LOGICAL", 
		"COMMENTS", "WS"
	};
	public static final int
		RULE_principal = 0, RULE_statements = 1, RULE_statementDatabase = 2, RULE_createDatabase = 3, 
		RULE_alterDatabase = 4, RULE_dropDatabase = 5, RULE_showDatabases = 6, 
		RULE_useDatabase = 7, RULE_createTable = 8, RULE_insertColumns = 9, RULE_constraint = 10, 
		RULE_tipoId = 11, RULE_cKey = 12, RULE_insertConstraint = 13, RULE_booleanExpression = 14, 
		RULE_or = 15, RULE_and = 16, RULE_opeRelacional = 17, RULE_relacional = 18, 
		RULE_not = 19, RULE_atom = 20, RULE_statementTable = 21, RULE_alterTable = 22, 
		RULE_renameTable = 23, RULE_actionTable = 24, RULE_addColumn = 25, RULE_addConstraint = 26, 
		RULE_dropColumn = 27, RULE_dropConstraint = 28, RULE_showTables = 29, 
		RULE_dropTable = 30, RULE_showColumnsFrom = 31, RULE_statementData = 32, 
		RULE_insert = 33, RULE_update = 34, RULE_setting = 35, RULE_delete = 36, 
		RULE_select = 37, RULE_condicion = 38, RULE_extra = 39;
	public static final String[] ruleNames = {
		"principal", "statements", "statementDatabase", "createDatabase", "alterDatabase", 
		"dropDatabase", "showDatabases", "useDatabase", "createTable", "insertColumns", 
		"constraint", "tipoId", "cKey", "insertConstraint", "booleanExpression", 
		"or", "and", "opeRelacional", "relacional", "not", "atom", "statementTable", 
		"alterTable", "renameTable", "actionTable", "addColumn", "addConstraint", 
		"dropColumn", "dropConstraint", "showTables", "dropTable", "showColumnsFrom", 
		"statementData", "insert", "update", "setting", "delete", "select", "condicion", 
		"extra"
	};

	@Override
	public String getGrammarFileName() { return "GramaticaSQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PrincipalContext extends ParserRuleContext {
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public PrincipalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_principal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterPrincipal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitPrincipal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitPrincipal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrincipalContext principal() throws RecognitionException {
		PrincipalContext _localctx = new PrincipalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_principal);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80); statements();
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(81); match(T__4);
					setState(82); statements();
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(89);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(88); match(T__4);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	 
		public StatementsContext() { }
		public void copyFrom(StatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmtPrincipalDBContext extends StatementsContext {
		public StatementDatabaseContext statementDatabase() {
			return getRuleContext(StatementDatabaseContext.class,0);
		}
		public StmtPrincipalDBContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterStmtPrincipalDB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitStmtPrincipalDB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitStmtPrincipalDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtPrincipalDataContext extends StatementsContext {
		public StatementDataContext statementData() {
			return getRuleContext(StatementDataContext.class,0);
		}
		public StmtPrincipalDataContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterStmtPrincipalData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitStmtPrincipalData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitStmtPrincipalData(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtPrincipalTableContext extends StatementsContext {
		public StatementTableContext statementTable() {
			return getRuleContext(StatementTableContext.class,0);
		}
		public StmtPrincipalTableContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterStmtPrincipalTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitStmtPrincipalTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitStmtPrincipalTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		try {
			setState(94);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new StmtPrincipalDBContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(91); statementDatabase();
				}
				break;
			case 2:
				_localctx = new StmtPrincipalTableContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92); statementTable();
				}
				break;
			case 3:
				_localctx = new StmtPrincipalDataContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(93); statementData();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementDatabaseContext extends ParserRuleContext {
		public StatementDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementDatabase; }
	 
		public StatementDatabaseContext() { }
		public void copyFrom(StatementDatabaseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmtShowDBContext extends StatementDatabaseContext {
		public ShowDatabasesContext showDatabases() {
			return getRuleContext(ShowDatabasesContext.class,0);
		}
		public StmtShowDBContext(StatementDatabaseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterStmtShowDB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitStmtShowDB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitStmtShowDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtDropDBContext extends StatementDatabaseContext {
		public DropDatabaseContext dropDatabase() {
			return getRuleContext(DropDatabaseContext.class,0);
		}
		public StmtDropDBContext(StatementDatabaseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterStmtDropDB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitStmtDropDB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitStmtDropDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtCreateDBContext extends StatementDatabaseContext {
		public CreateDatabaseContext createDatabase() {
			return getRuleContext(CreateDatabaseContext.class,0);
		}
		public StmtCreateDBContext(StatementDatabaseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterStmtCreateDB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitStmtCreateDB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitStmtCreateDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtAlterDBContext extends StatementDatabaseContext {
		public AlterDatabaseContext alterDatabase() {
			return getRuleContext(AlterDatabaseContext.class,0);
		}
		public StmtAlterDBContext(StatementDatabaseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterStmtAlterDB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitStmtAlterDB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitStmtAlterDB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtUseDBContext extends StatementDatabaseContext {
		public UseDatabaseContext useDatabase() {
			return getRuleContext(UseDatabaseContext.class,0);
		}
		public StmtUseDBContext(StatementDatabaseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterStmtUseDB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitStmtUseDB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitStmtUseDB(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementDatabaseContext statementDatabase() throws RecognitionException {
		StatementDatabaseContext _localctx = new StatementDatabaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statementDatabase);
		try {
			setState(101);
			switch (_input.LA(1)) {
			case CREATE:
				_localctx = new StmtCreateDBContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(96); createDatabase();
				}
				break;
			case ALTER:
				_localctx = new StmtAlterDBContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(97); alterDatabase();
				}
				break;
			case DROP:
				_localctx = new StmtDropDBContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(98); dropDatabase();
				}
				break;
			case USE:
				_localctx = new StmtUseDBContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(99); useDatabase();
				}
				break;
			case SHOW:
				_localctx = new StmtShowDBContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(100); showDatabases();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDatabaseContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramaticaSQLParser.ID, 0); }
		public TerminalNode DATABASE() { return getToken(GramaticaSQLParser.DATABASE, 0); }
		public TerminalNode CREATE() { return getToken(GramaticaSQLParser.CREATE, 0); }
		public CreateDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterCreateDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitCreateDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitCreateDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateDatabaseContext createDatabase() throws RecognitionException {
		CreateDatabaseContext _localctx = new CreateDatabaseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); match(CREATE);
			setState(104); match(DATABASE);
			setState(105); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterDatabaseContext extends ParserRuleContext {
		public TerminalNode RENAME() { return getToken(GramaticaSQLParser.RENAME, 0); }
		public List<TerminalNode> ID() { return getTokens(GramaticaSQLParser.ID); }
		public TerminalNode DATABASE() { return getToken(GramaticaSQLParser.DATABASE, 0); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaSQLParser.ID, i);
		}
		public TerminalNode TO() { return getToken(GramaticaSQLParser.TO, 0); }
		public TerminalNode ALTER() { return getToken(GramaticaSQLParser.ALTER, 0); }
		public AlterDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterAlterDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitAlterDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitAlterDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlterDatabaseContext alterDatabase() throws RecognitionException {
		AlterDatabaseContext _localctx = new AlterDatabaseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_alterDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); match(ALTER);
			setState(108); match(DATABASE);
			setState(109); match(ID);
			setState(110); match(RENAME);
			setState(111); match(TO);
			setState(112); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropDatabaseContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramaticaSQLParser.ID, 0); }
		public TerminalNode DATABASE() { return getToken(GramaticaSQLParser.DATABASE, 0); }
		public TerminalNode DROP() { return getToken(GramaticaSQLParser.DROP, 0); }
		public DropDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterDropDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitDropDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitDropDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DropDatabaseContext dropDatabase() throws RecognitionException {
		DropDatabaseContext _localctx = new DropDatabaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dropDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(DROP);
			setState(115); match(DATABASE);
			setState(116); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowDatabasesContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(GramaticaSQLParser.SHOW, 0); }
		public TerminalNode DATABASES() { return getToken(GramaticaSQLParser.DATABASES, 0); }
		public ShowDatabasesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showDatabases; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterShowDatabases(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitShowDatabases(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitShowDatabases(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShowDatabasesContext showDatabases() throws RecognitionException {
		ShowDatabasesContext _localctx = new ShowDatabasesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_showDatabases);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(SHOW);
			setState(119); match(DATABASES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseDatabaseContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramaticaSQLParser.ID, 0); }
		public TerminalNode DATABASE() { return getToken(GramaticaSQLParser.DATABASE, 0); }
		public TerminalNode USE() { return getToken(GramaticaSQLParser.USE, 0); }
		public UseDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).enterUseDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaSQLListener ) ((GramaticaSQLListener)listener).exitUseDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaSQLVisitor ) return ((GramaticaSQLVisitor<? extends T>)visitor).visitUseDatabase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseDatabaseContext useDatabase() throws RecognitionException {
		UseDatabaseContext _localctx = new UseDatabaseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_useDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(USE);
			setState(122); match(DATABASE);
			setState(123); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramaticaSQLParser.ID, 0); }
		public InsertColumnsContext insertColumns() {
			return getRuleContext(InsertColumnsContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public TerminalNode CREATE() { return getToken(GramaticaSQLParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(GramaticaSQLParser.TABLE, 0); }
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
		@Override
